[gd_scene load_steps=11 format=2]

[ext_resource path="res://art/scorpion/idle/scorpion_walking2.png" type="Texture" id=1]
[ext_resource path="res://art/scorpion/attack/scorpion_attack3.png" type="Texture" id=2]
[ext_resource path="res://art/scorpion/attack/scorpion_attack1.png" type="Texture" id=3]
[ext_resource path="res://art/scorpion/attack/scorpion_attack2.png" type="Texture" id=4]
[ext_resource path="res://art/scorpion/idle/scorpion_walking1.png" type="Texture" id=5]
[ext_resource path="res://art/scorpion/attack/scorpion_attack4.png" type="Texture" id=6]
[ext_resource path="res://scripts/Scorpion.gd" type="Script" id=7]
[ext_resource path="res://sound/scropion.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "attack",
"speed": 30.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9, 6 )

[node name="Scorpion" type="KinematicBody2D" groups=["Attacker", "Enemy"]]
script = ExtResource( 7 )
gravity = 1500
speed = 75
maximum_hp = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 3 )

[node name="AttackWaitingTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ScorpionSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="AttackWaitingTimer" to="." method="_on_AttackWaitingTimer_timeout"]
